@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{20C30A1C-05D3-48C6-A371-5FD522499DD2}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -48,6 +48,7 @@
     <Compile Include="ExpressionsTests.cs" />
     <Compile Include="ExpressionUtilitiesTests.cs" />
     <Compile Include="FunctionTests.cs" />
+    <Compile Include="FutureTests.cs" />
     <Compile Include="MachineTests.cs" />
     <Compile Include="ObjectEnvironmentTests.cs" />
     <Compile Include="ObjectUtilitiesTests.cs" />
